--- a/TP2/SimTP2Q.csproj
+++ b/TP2/SimTP2Q.csproj
@@ -83,6 +83,18 @@
     <Compile Include="Presentación\frmDistribucionUniforme.Designer.cs">
       <DependentUpon>frmDistribucionUniforme.cs</DependentUpon>
     </Compile>
+    <Compile Include="Presentación\frmMontecarlo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentación\frmMontecarlo.Designer.cs">
+      <DependentUpon>frmMontecarlo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Presentación\frmMontecarloV2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentación\frmMontecarloV2.Designer.cs">
+      <DependentUpon>frmMontecarloV2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Presentación\frmVariablesAleatorias.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -105,6 +117,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Presentación\frmGrafico.resx">
       <DependentUpon>frmGrafico.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Presentación\frmMontecarlo.resx">
+      <DependentUpon>frmMontecarlo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Presentación\frmMontecarloV2.resx">
+      <DependentUpon>frmMontecarloV2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Presentación\frmVariablesAleatorias.resx">
       <DependentUpon>frmVariablesAleatorias.cs</DependentUpon>
