--- a/TP2/SimTP2Q.csproj
+++ b/TP2/SimTP2Q.csproj
@@ -53,6 +53,12 @@
     <Compile Include="Lógica\Poisson.cs" />
     <Compile Include="Lógica\PruebasBondad.cs" />
     <Compile Include="Lógica\Uniforme.cs" />
+    <Compile Include="Presentación\frmCallcenter.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentación\frmCallcenter.Designer.cs">
+      <DependentUpon>frmCallcenter.cs</DependentUpon>
+    </Compile>
     <Compile Include="Presentación\frmGrafico.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,12 +89,6 @@
     <Compile Include="Presentación\frmDistribucionUniforme.Designer.cs">
       <DependentUpon>frmDistribucionUniforme.cs</DependentUpon>
     </Compile>
-    <Compile Include="Presentación\frmMontecarlo.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Presentación\frmMontecarlo.Designer.cs">
-      <DependentUpon>frmMontecarlo.cs</DependentUpon>
-    </Compile>
     <Compile Include="Presentación\frmMontecarloV2.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -103,6 +103,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Presentación\frmCallcenter.resx">
+      <DependentUpon>frmCallcenter.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Presentación\frmDistribucionExponencial.resx">
       <DependentUpon>frmDistribucionExponencial.cs</DependentUpon>
     </EmbeddedResource>
@@ -117,9 +120,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Presentación\frmGrafico.resx">
       <DependentUpon>frmGrafico.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Presentación\frmMontecarlo.resx">
-      <DependentUpon>frmMontecarlo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Presentación\frmMontecarloV2.resx">
       <DependentUpon>frmMontecarloV2.cs</DependentUpon>
