--- a/TP2/SimTP2Q.csproj
+++ b/TP2/SimTP2Q.csproj
@@ -33,8 +33,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Guna.UI2, Version=2.0.4.4, Culture=neutral, PublicKeyToken=8b9d14aa5142e261, processorArchitecture=MSIL">
+      <HintPath>packages\Guna.UI2.WinForms.2.0.4.4\lib\net48\Guna.UI2.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
+    <Reference Include="System.Management" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -47,12 +53,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Lógica\Cliente.cs" />
+    <Compile Include="Lógica\Eventos.cs" />
     <Compile Include="Lógica\Exponencial.cs" />
-    <Compile Include="Lógica\LlamadaMontecarlo.cs" />
+    <Compile Include="Lógica\GestorSimulacion.cs" />
     <Compile Include="Lógica\Normal.cs" />
     <Compile Include="Lógica\NumerosAleatorios.cs" />
+    <Compile Include="Lógica\Parametros.cs" />
     <Compile Include="Lógica\Poisson.cs" />
     <Compile Include="Lógica\PruebasBondad.cs" />
+    <Compile Include="Lógica\ServidorAlmacen.cs" />
+    <Compile Include="Lógica\ServidorBarco.cs" />
+    <Compile Include="Lógica\Simulacion.cs" />
     <Compile Include="Lógica\Uniforme.cs" />
     <Compile Include="Presentación\frmCallcenter.cs">
       <SubType>Form</SubType>
@@ -60,11 +72,11 @@
     <Compile Include="Presentación\frmCallcenter.Designer.cs">
       <DependentUpon>frmCallcenter.cs</DependentUpon>
     </Compile>
-    <Compile Include="Presentación\frmGrafico.cs">
+    <Compile Include="Presentación\frmColas.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Presentación\frmGrafico.Designer.cs">
-      <DependentUpon>frmGrafico.cs</DependentUpon>
+    <Compile Include="Presentación\frmColas.Designer.cs">
+      <DependentUpon>frmColas.cs</DependentUpon>
     </Compile>
     <Compile Include="Presentación\frmDistribucionExponencial.cs">
       <SubType>Form</SubType>
@@ -96,16 +108,31 @@
     <Compile Include="Presentación\frmMontecarloV2.Designer.cs">
       <DependentUpon>frmMontecarloV2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Presentación\frmPrincipal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentación\frmPrincipal.Designer.cs">
+      <DependentUpon>frmPrincipal.cs</DependentUpon>
+    </Compile>
     <Compile Include="Presentación\frmVariablesAleatorias.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Presentación\frmVariablesAleatorias.Designer.cs">
       <DependentUpon>frmVariablesAleatorias.cs</DependentUpon>
     </Compile>
+    <Compile Include="Presentación\Prueba.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Presentación\Prueba.Designer.cs">
+      <DependentUpon>Prueba.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Presentación\frmCallcenter.resx">
       <DependentUpon>frmCallcenter.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Presentación\frmColas.resx">
+      <DependentUpon>frmColas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Presentación\frmDistribucionExponencial.resx">
       <DependentUpon>frmDistribucionExponencial.cs</DependentUpon>
@@ -119,14 +146,17 @@
     <EmbeddedResource Include="Presentación\frmDistribucionUniforme.resx">
       <DependentUpon>frmDistribucionUniforme.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Presentación\frmGrafico.resx">
-      <DependentUpon>frmGrafico.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Presentación\frmMontecarloV2.resx">
       <DependentUpon>frmMontecarloV2.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Presentación\frmPrincipal.resx">
+      <DependentUpon>frmPrincipal.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Presentación\frmVariablesAleatorias.resx">
       <DependentUpon>frmVariablesAleatorias.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Presentación\Prueba.resx">
+      <DependentUpon>Prueba.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -138,6 +168,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -162,6 +193,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\boleto.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\R.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\R %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\OIP1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sticker-png-button-ui-2-windows-restart-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\actualizar.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
